frontend/app/[slug]/page.module.css
.page {
  padding-bottom: 14px;
}

.PageNotFound {
  height: 60vh;
  display : flex;;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  font-size : clamp(1.2rem, 4vw, 2.5rem);
  font-weight : bold;
  text-align: center;
  background: linear-gradient(135deg, #00c3ff 0%, #ffff1c 100%);
  
}

